fixed testimonials dark mode color using global variable

--- a/assets/css/testimonials.css
+++ b/assets/css/testimonials.css
@@ -25,7 +25,6 @@
   display: flex;
   align-items: center;
   margin-top: 32px;
-  
 }
 
 #testimonial-carousel .carousel-item {
@@ -57,6 +56,7 @@ em.testimonial-text {
 h3.testimonial-text {
   margin-top: 10px;
   text-align: left;
+  color: var(--heading);
 }
 
 .testimonial-text span {
